WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268358
[UnifiedPDF] Text annotation HTML inputs do not get repositioned when scrolling
https://bugs.webkit.org/show_bug.cgi?id=268358
Summary
[UnifiedPDF] Text annotation HTML inputs do not get repositioned when scrolling
Sammy Gill
Reported
2024-01-29 22:39:27 PST
When a text annotation is focused and the HTML input element is displayed, the element should get repositioned as the page scrolls so that it is always over the corresponding annotation. Currently it gets stuck to the same location in the view
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-29 22:42:23 PST
<
rdar://problem/121907236
>
Sammy Gill
Comment 2
2024-01-30 17:16:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23551
EWS
Comment 3
2024-01-31 10:08:42 PST
Committed
273837@main
(14b3ba128b7a): <
https://commits.webkit.org/273837@main
> Reviewed commits have been landed. Closing PR #23551 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug