[UnifiedPDF] Text annotation HTML inputs do not get repositioned when scrolling https://bugs.webkit.org/show_bug.cgi?id=268358 rdar://121907236

Reviewed by Simon Fraser.

When the scroll offset is changed, we should make sure that the geometry
of any active annotation gets updated also. The annotation will update
its location based off the new scroll position.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::didChangeScrollOffset):

Canonical link: https://commits.webkit.org/273837@main